refactor(sponsor): update sponsor display layout with overlapping logos

--- a/src/app/features/scoreboard/components/sponsor-display/match-sponsor-line-display-flat.component.less
+++ b/src/app/features/scoreboard/components/sponsor-display/match-sponsor-line-display-flat.component.less
@@ -1,3 +1,26 @@
 :host {
   display: block;
 }
+
+.match-sponsor-line-display {
+  .sponsor-line {
+    display: flex;
+    justify-content: center;
+
+    .sponsor-logos {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      gap: 0;
+
+      app-sponsor-display-flat {
+        margin-left: -22px;
+      }
+
+      app-sponsor-display-flat:first-child {
+        margin-left: 0;
+      }
+    }
+  }
+}
