--- a/src/app/features/scoreboard/components/sponsor-display/sponsor-display-flat.component.html
+++ b/src/app/features/scoreboard/components/sponsor-display/sponsor-display-flat.component.html
@@ -5,9 +5,8 @@
         <img
           [ngSrc]="logoSrc()"
           fill
-          sizes="100vw"
           [style.transform]="'scale(' + logoScale() + ')'"
-          [attr.alt]="displayTitle() || 'Sponsor logo'"
+          [attr.alt]="'Sponsor logo'"
           [priority]="priority()"
         />
       </div>
