--- a/src/app/features/scoreboard/components/sponsor-display/sponsor-display-flat.component.less
+++ b/src/app/features/scoreboard/components/sponsor-display/sponsor-display-flat.component.less
@@ -1,18 +1,17 @@
 :host {
   display: flex;
-  flex: 1 1 auto;
-  justify-content: center;
 }
 
 .sponsor-display-flat {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 12px;
   color: #fff;
   text-transform: uppercase;
   font-weight: 600;
   letter-spacing: 0.04em;
+  margin: 0;
+  padding: 0;
 
   &__logo {
     width: 220px;
@@ -21,6 +20,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 0;
+    padding: 0;
+
+    img {
+      width: 100%;
+      height: 100%;
+    }
   }
 
   img {
