--- a/src/app/features/scoreboard/components/sponsor-display/match-sponsor-line-display-flat.component.less
+++ b/src/app/features/scoreboard/components/sponsor-display/match-sponsor-line-display-flat.component.less
@@ -13,13 +13,11 @@
       justify-content: center;
       align-items: center;
       gap: 0;
+      line-height: 0;
 
       app-sponsor-display-flat {
-        margin-left: -22px;
-      }
-
-      app-sponsor-display-flat:first-child {
-        margin-left: 0;
+        margin: 0;
+        padding: 0;
       }
     }
   }
