--- a/src/app/features/scoreboard/components/display/scoreboard-display.component.less
+++ b/src/app/features/scoreboard/components/display/scoreboard-display.component.less
@@ -82,7 +82,7 @@
 }
 
 .logo-box {
-  display: grid;
+  display: flex;
   align-items: center;
   justify-content: center;
   width: 80px;
@@ -95,9 +95,14 @@
   }
 
   img {
+    display: block;
+    width: auto;
+    height: auto;
     max-width: 100%;
     max-height: 100%;
     object-fit: contain;
+    object-position: center;
+    transform-origin: center;
   }
 }
 
