--- a/src/app/features/scoreboard/components/display/scoreboard-display.component.less
+++ b/src/app/features/scoreboard/components/display/scoreboard-display.component.less
@@ -344,6 +344,23 @@
   }
 }
 
+.info-value-swap {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  align-items: center;
+  justify-content: center;
+}
+
+.info-value-layer {
+  position: absolute;
+  inset: 0;
+  display: grid;
+  align-items: center;
+  justify-content: center;
+}
+
 .flag-indicator {
   position: absolute;
   top: 0;
