fix(scoreboard): keep down-distance within box

--- a/src/app/features/scoreboard/components/display/scoreboard-display.component.html
+++ b/src/app/features/scoreboard/components/display/scoreboard-display.component.html
@@ -137,7 +137,14 @@
         } @else {
           <div class="info-value-swap">
             @for (dd of [downDistance()]; track dd) {
-              <span class="info-value info-value-layer" [@infoValueChange]="true">{{ dd }}</span>
+              <span
+                class="info-value info-value-layer"
+                [appAutoFitText]="true"
+                [maxFontSize]="26"
+                [minFontSize]="14"
+                [containerPadding]="0"
+                [@infoValueChange]="true"
+              >{{ dd }}</span>
             }
           </div>
         }
