--- a/src/app/features/scoreboard/components/admin-forms/down-distance-forms/down-distance-forms.component.less
+++ b/src/app/features/scoreboard/components/admin-forms/down-distance-forms/down-distance-forms.component.less
@@ -157,6 +157,7 @@ tui-badged-content:has(tui-badge-notification) {
   .flag-icon {
     font-size: 20px;
     line-height: 1;
+    color: #f2c200;
   }
 
   &.flag-active {
